--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <script src="https://prod.flat-cdn.com/embed-js/v2.4.1/embed.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
