feat: enhance task statistics retrieval and response structure
- Updated TaskAssignmentController to return a new TaskStatsResponse object, which includes both task statistics and a list of cancelled specialist IDs for milestones.
- Refactored TaskAssignmentService to implement the new response structure, ensuring that task statistics and cancelled specialist IDs are fetched in a single call.
- Introduced new repository methods in TaskAssignmentRepository to support fetching cancelled task assignments and distinct specialist IDs.
- Added a new TaskStatsResponse DTO to encapsulate the response data structure.
- Updated frontend components to utilize the new document title hook for better user experience across various pages.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>MutraPro</title>
     <script src="https://prod.flat-cdn.com/embed-js/v2.4.1/embed.min.js"></script>
   </head>
   <body>
