fix: update icon and enhance Demos tab UI
- Changed the favicon from vite.svg to MUTRAPROI.svg for branding consistency.
- Refactored the Demos tab in SingerDetailPage to improve layout and styling, including new CSS classes for better responsiveness and visual appeal.
- Updated text and structure for audio track elements, enhancing user experience with clearer descriptions and improved hover effects.
- Made various text translations from Vietnamese to English for better accessibility.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/MUTRAPROI.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MutraPro</title>
     <script src="https://prod.flat-cdn.com/embed-js/v2.4.1/embed.min.js"></script>
