--- a/frontend/public/smoosic/html/loading-unittest.html
+++ b/frontend/public/smoosic/html/loading-unittest.html
@@ -1,41 +1,45 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta charset="utf-8" />
+    <title>Smoosic Unit Tests</title>
+    <link href="../styles/fonts.css" rel="stylesheet" />
+    <link href="../styles/media.css" rel="stylesheet" />
+    <link href="../styles/ribbon.css" rel="stylesheet" />
+    <link href="../styles/dialogs.css" rel="stylesheet" />
+    <link href="../styles/menus.css" rel="stylesheet" />
+    <link href="../styles/piano.css" rel="stylesheet" />
+    <link href="../styles/tree.css" rel="stylesheet" />
+    <link href="../qunit.css" rel="stylesheet" />
+    <script
+      type="text/javascript"
+      src="https://smoosic.github.io/vexflow_smoosic/releases/vexflow-debug.js"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"
+      integrity="sha512-uVSVjE7zYsGz4ag0HEzfugJ78oHCI1KhdkivjQro8ABL/PRiEO4ROwvrolYAcZnky0Fl/baWKYilQfWvESliRA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <!-- script type="text/javascript" src="../../../vex_smoosic/vexflow_smoosic/build/vexflow-debug.js"></script  -->
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-3.3.1.slim.js"
+    ></script>
+    <script type="text/javascript" src="../midi-parser.js"></script>
+    <script type="text/javascript" src="../qunit.js"></script>
+    <script type="text/javascript" src="../smoosic.js"></script>
+    <script type="text/javascript">
+      document.addEventListener('DOMContentLoaded', function (event) {
+        Smo.createLoadTests();
+      });
+    </script>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Smoosic Unit Tests</title>
-  <link href="../styles/fonts.css" rel="stylesheet">
-  <link href="../styles/media.css" rel="stylesheet">
-  <link href="../styles/ribbon.css" rel="stylesheet">
-  <link href="../styles/dialogs.css" rel="stylesheet">
-  <link href="../styles/menus.css" rel="stylesheet">
-  <link href="../styles/piano.css" rel="stylesheet">
-  <link href="../styles/tree.css" rel="stylesheet">
-  <link href="../qunit.css" rel="stylesheet">
-  <script type="text/javascript"
-    src="https://smoosic.github.io/vexflow_smoosic/releases/vexflow-debug.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"
-    integrity="sha512-uVSVjE7zYsGz4ag0HEzfugJ78oHCI1KhdkivjQro8ABL/PRiEO4ROwvrolYAcZnky0Fl/baWKYilQfWvESliRA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <!-- script type="text/javascript" src="../../../vex_smoosic/vexflow_smoosic/build/vexflow-debug.js"></script  -->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.slim.js"></script>
-  <script type="text/javascript" src="../midi-parser.js"></script>
-  <script type="text/javascript" src="../qunit.js"></script>
-  <script type="text/javascript" src="../smoosic.js"></script>
-  <script type="text/javascript">
-    document.addEventListener("DOMContentLoaded", function (event) {
-      Smo.createLoadTests();
-    });
-  </script>
-</head>
-
-<body>
-  <div id="qunit"></div>
-  <div id="outer-container" style="overflow:auto">
-    <div id="container1">
-
+  <body>
+    <div id="qunit"></div>
+    <div id="outer-container" style="overflow: auto">
+      <div id="container1"></div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
